--- a/README
+++ b/README
@@ -21,5 +21,5 @@ PhoPlay.py - Lauch the GUI
 PhoPlay.py - something.flac - Launch GUI and play something.flac
 PhoPlay.py -x something.mp3 - Play something.mp3 from the commandline - no GUI
 
-for *.mp3; do PhoPlay.py -q $tune; done; - Play all mp3s re-launching the
+for tune in *.mp3; do PhoPlay.py -q $tune; done; - Play all mp3s re-launching the
 application each time.  Useful for playing a album in a folder.
