Enable initial show Mime types dialog

--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
   * Layout improvements
   * Play on launch by default?
   * Hotkeys - spacebar = pause etc
+  * Open URL menu item?
 
 * PLAYLIST MODE
   * play all files from command line i.e *.mp3
